<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/nick_image_hour"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_la_hora"
                android:scaleType="centerCrop"
                android:src="@drawable/alarmdepor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nick_hour3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit2_entre"
                app:layout_constraintStart_toEndOf="@+id/nick_image_hour"
                app:layout_constraintTop_toTopOf="@+id/nick_image_hour"
                tools:text="10:30" />

            <ImageView
                android:id="@+id/btn_edit2_entre"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@color/purple_700"
                android:contentDescription="@string/editar_hora"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_del2_entre" />

            <ImageView
                android:id="@+id/btn_del2_entre"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/purple_700"
                android:contentDescription="@string/eliminar_hora"
                android:src="@android:drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
